# followthetone-rs

./: .cursorrules  .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  add_detailed_specs.surql  api-testing.md  backend-updates-summary.md  check_detailed_specs.surql  features.md  fly.toml  frontend-image-implementation-guide.md  generate_slugs.surql  guitar-comparison-feature.plan.md  guitars.json  history.txt  leptos.toml  manual_slug_update.surql  remove_test_from_slug.surql  results.json  revert_banker_changes.surql  run.py  run_add_detailed_specs.sh  run_banker_seed.sh  run_basic_migration.sh  run_bigsv_new_only.sh  run_bigsv_only.sh  run_cleanup_duplicates.sh  run_cmd.sh  run_comparison_migration.sh  run_import_to_import.sh  run_migration.sh  run_to_import_final.sh  run_to_import_seed.sh  run_to_import_seed_simple.sh  run_update_indexes.sh  run_verb.sh  rust-toolchain.toml  (+4 more)
data/: _upsert-template.surql  banker-full.surql  banker-seed.sql  banker-seed.surql  banker-seed.surql.bak  banker-upsert.surql  banker2-seed.json  banker2-seed.sql  banker2-seed.surql  banker_guitar_example.json  banker_guitars.json  banker_simple_import.surql  bigsv_new_only.surql  bigsv_only.surql  carter-vintage-gibson-2008-seed.surql  cleanup_duplicates.surql  database_schema.json  extracted_schema.surql  fender-seed.sql  fender-seed.surql  get_schema_export_20251015_012925.txt  gibson-1958-flying-v-seed.surql  gibson-2008-flying-v-reissue-seed.surql  gibson-seed.sql  gibson-seed.surql  images-seed.surql  import_to_import.surql  nikhuber-seed.sql  nikhuber-seed.surql  nikhuber2-seed.sql  nikhuber2-seed.surql  schema.json  schema.sql  schema.surql  schema_only.surql  spec_normalizations_seed.surql  to-import.md  to_import_final.surql  to_import_seed.surql  to_import_seed_simple.surql
docs/: FRONTEND_API_GUIDE.md  SWAGGER_IMPLEMENTATION_SUMMARY.md  api-documentation.json  surql_rules.md
migrations/: 20250114_add_slug_field.down.surql  20250114_add_slug_field.up.surql  20250114_add_slug_field_clean.surql  20250114_delete_test_guitars.surql  20250114_drop_slug_field.surql  20250114_fix_slug_field_complete.surql  20250114_fix_slug_field_simple.surql  20250114_recreate_slug_field.surql  20250114_simple_slug_migration.surql  20250125_add_image_fields.surql  20250125_update_guitar_indexes.surql  20250905170752_guitars_schema.down.sql  20250905170752_guitars_schema.up.sql
scripts/: generate-docs.sh
sql_commands/: add_guitars_market_fields.surql  add_slug_field.surql  check_table_schema.surql  create_current_schema.surql  fender-seed.surql  get_schema.surql  select_all_guitars.surql  update_single_record.surql
src/: app.rs  config.rs  lib.rs  main.rs  models.rs  routes.rs
src/components/: guitar_detail_page.rs  guitars_list_page.rs  home_page.rs  layout.rs  mod.rs
