[package]
name = "gear_api"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# SurrealDB SDK, HTTP/HTTPS protocol (enable default features for TLS)
surrealdb = { version = "2", features = ["protocol-http"] }

# HTTP client for server
reqwest = { version = "0.11", features = ["json"] }

# OpenAPI/Swagger documentation
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
